# dl-onboarding

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  ONBOARDING.md  README.md  docker-compose.yml  learnings.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: CODEOWNERS
app/: README.md  main.py  tools_resolver.py
archive/: .gitkeep
backlog/: items.yaml
changes/: .gitkeep
demo/: README.md  slides.html
frontend/: .env.local.example  .gitignore  package-lock.json  package.json
scripts/: dev.sh
specs/: README.md  ingestion-log.yaml  workflows.yaml
tests/: conftest.py  test_admin_auth.py  test_admin_catalog.py  test_admin_launches.py  test_answers.py  test_auto_populate_tools.py  test_catalog_seed.py  test_comments.py  test_communities.py  test_community_reply_trigger.py  test_concierge.py  test_embeddings_backfill.py  test_embeddings_lifecycle.py  test_embeddings_search.py  test_founder_analytics.py  test_founder_dashboard.py  test_founder_launches.py  test_founder_profile_audit.py  test_hybrid_search.py  test_launch_publish.py  test_launch_redirect.py  test_launch_slug.py  test_launches_browse.py  test_live_engine.py  test_live_questions.py  test_live_step_endpoint.py  test_login.py  test_me.py  test_me_communities.py  test_me_notifications.py  test_me_profile_summary.py  test_me_tools.py  test_middleware.py  test_onboarding_match.py  test_onboarding_variant_flag.py  test_posts.py  test_product_page.py  test_profile_lifecycle.py  test_questions_next.py  test_recommendations.py  (+7 more)
validation/: approaches.md  onboarding-v1-locked.md  (+2 more)
(+368 files in other folders)
