[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh"
version = "0.1.0"
description = "Mesh — context-graph launch platform for AI tools"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Haseeb Gulraiz" },
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "motor>=3.5",
    "bcrypt>=4.2",
    "pyjwt>=2.9",
    "pydantic[email]>=2.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
